# xword

./: .gitignore  README.md  build.gradle  settings.gradle
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changeLogs/: 2.txt  3.txt  4.txt  5.txt
gradle/wrapper/: gradle-wrapper.properties
xword/: build.gradle
xword/src/androidTest/java/uk/co/yahoo/p1rpp/xword/: ExampleInstrumentedTest.java
xword/src/main/: AndroidManifest.xml
xword/src/main/cpp/: CMakeLists.txt  makedict.c  native-lib.cpp  words  xwordsearch-jni.c
xword/src/main/java/uk/co/yahoo/p1rpp/xword/: MainActivity.java  MatchTextEditor.java
xword/src/main/res/layout/: activity_main.xml  resultitem.xml
xword/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
xword/src/main/res/values-night/: themes.xml
xword/src/test/java/uk/co/yahoo/p1rpp/xword/: ExampleUnitTest.java
